--- a/src/components/additionalFeatures/CarRanking.css
+++ b/src/components/additionalFeatures/CarRanking.css
@@ -23,12 +23,12 @@
     }
   }
   
-  .characters {
+  .vehicles {
     list-style: none;
     padding-left: 0;
   }
   
-  .characters li {
+  .vehicles li {
     display: flex;
     align-items: center;
     border: solid 2px #d0d0d0;
@@ -37,13 +37,13 @@
     margin-bottom: 1em;
   }
   
-  .characters p {
+  .vehicles p {
     max-width: none;
     font-weight: bold;
     margin: 0;
   }
   
-  .characters-thumb {
+  .vehicles-thumb {
     overflow: hidden;
     flex-shrink: 0;
     width: 2em;
@@ -53,7 +53,17 @@
     margin-right: .5em;
   }
   
-  .characters-thumb img {
+  .delete-icon {
+    overflow: hidden;
+    flex-shrink: 0;
+    width: 2em;
+    height: 2em;
+    /* background-color: #e8e8e8; */
+    padding: .5em;
+    margin-left: auto; 
+  }
+  
+  .vehicles-thumb img {
     display: block;
     width: 100%;
     height: auto;
